# bricks

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml
.rpiv/artifacts/designs/: 2026-06-03_12-45-43_brick-making-monorepo-setup.md  2108da6_rust-microservices-architecture.md
.rpiv/artifacts/plans/: 2026-06-03_06-07-48_rust-microservices-architecture.md  2026-06-03_12-45-43_brick-making-monorepo-setup.md  2026-06-03_14-00-00_rust-microservices-architecture.md
.rpiv/artifacts/solutions/: 2026-06-03_12-45-43_brick-making-monorepo-setup.md  rust-microservices-architecture.md
.rpiv/artifacts/validation/: 2026-06-03_13-43-50_brick-making-monorepo-setup.md
apps/admin/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.test.ts  App.ts  main.ts
apps/orders/: index.html  package-lock.json  package.json  vite.config.ts
apps/orders/src/: App.ts
services/api/: .dockerignore  Cargo.toml  Dockerfile
services/api/src/: main.rs
